--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,11 @@
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
     </div>
+	<form>
+	<input type="text" name="name" minlength="20" required pattern="[a-z][A-Z]" class="input">
+	<input type="search" name="name-slug" required pattern="[a-z][A-Z]" class="input">
+	<input type="number" name="contributers" required min="1" max="100" class="input">
+	<input type="number" name="branches" required min="1" max="100" class="input">
+	</form>
   </body>
 </html>
