--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
     </div>
 	<form>
 	<input type="text" name="name" minlength="20" required pattern="[a-z][A-Z]" class="input">
-	<input type="search" name="name-slug" required pattern="[a-z][A-Z]" class="input">
+	<input type="search" name="name_slug" required pattern="[a-z][A-Z][kebab-case]" class="input">
 	<input type="number" name="contributers" required min="1" max="100" class="input">
-	<input type="number" name="branches" required min="1" max="100" class="input">
+	<input type="number" name="max_branches" required min="1" max="100" class="input">
 	</form>
   </body>
 </html>
