--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     </div>
 	<form>
 	<input type="text" name="name" minlength="20" required pattern="[a-z][A-Z]" class="input">
-	<input type="search" name="name_slug" required pattern="[a-z][A-Z][kebab-case]" class="input">
+	<input type="search" name="name_slug" required pattern="^([a-z][a-z0-9]*)(-[a-z0-9]+)*$" class="input">
 	<input type="number" name="contributers" required min="1" max="100" class="input">
 	<input type="number" name="max_branches" required min="1" max="100" class="input">
 	</form>
